Criando tabela Falta, resta coletar alunos ausentes na lista de chamada e adicioná-los na tabela de faltas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".SelecaoCRUDS" />
         <activity android:name=".Caderneta" />
         <activity android:name=".Login" />
-        <activity android:name=".CRUDAlunos_Turmas"></activity>
+        <activity android:name=".CRUDAlunos_Turmas" />
+        <activity android:name=".CRUDFalta"></activity>
     </application>
 
 </manifest>
